# hl_mai_11_event_sourcing

./: CMakeLists.txt  index.yaml  main_client.cpp  main_server.cpp  readme.md  techstack.md  techstack.yml
